fix vertical alignment

--- a/less/modules/notifications.less
+++ b/less/modules/notifications.less
@@ -59,6 +59,7 @@
   &.tui-notification-list-container__visible {
     opacity: 1;
     padding-top: 15px;
+    margin-top: -15px;
     max-height: (60px * 5 + 16px);
     height: auto;
     transform: translate(-50%, 0);
